src/css/webkit/store/game.css
/* ... */
.game_bg.application .game_description_column .franchise_notice:hover .background_image {
    transform: scale(1.03);
}


/** Highlist / Background gradient */
.game_bg.application .game_description_column .franchise_notice .franchise_highlight {
    height: unset;
    background: linear-gradient(90.00deg, rgb(var(--st-color-2)) 45%, rgb(var(--st-color-1), .6) 100%);
    box-shadow: unset !important;
}


/** Text */
.game_bg.application .game_description_column .franchise_notice .franchise_name {
    position: unset;
    z-index: 1;
    height: unset;
    margin-left: 16px;
    padding: 0;
}


/*
! Buy Options
*/
.game_bg.application .game_description_column .game_area_purchase {
    display: flex;
    flex-direction: column;
}


/** Buy Game */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game_wrapper {
    display: flex;
    flex-direction: column-reverse;
    margin-bottom: 0;
}

.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game {
    margin: 0 0 12px;
    padding: 12px 12px calc(32px + 12px + 12px);
    font-size: 12px;
    border-radius: 8px;
    background: unset;
    background-color: rgb(var(--st-color-2));
}
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game:has(.package_in_library_flag) {
    margin-top: 31px;
}

/*^ Complete banner */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game_wrapper .ds_flag {
    position: unset;
    z-index: unset;
    text-align: center;
    height: unset;
    margin-bottom: -8px;
    padding: 6px 6px calc(6px + 8px);
    font-size: 11px;
    font-weight: 600;
    color: #fff;
    border-radius: 8px 8px 0 0;
    background-color: rgb(var(--st-blue));
    box-shadow: unset;
}

/*^ In Library */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game_wrapper .package_in_library_flag {
    top: -31px;
    left: 0;
    z-index: -1;
    justify-content: center;
    width: -webkit-fill-available;
    height: unset;
    margin-bottom: -8px;
    padding: 6px 6px calc(6px + 8px);
    font-size: 11px;
    font-weight: 600;
    color: #fff;
    border-radius: 8px 8px 0 0;
    background-color: rgb(var(--st-green));
    box-shadow: unset;
}
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game_wrapper .package_in_library_flag .icon {
    display: none;
}

/*^ Title */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game h1,
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game h2 {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-bottom: 2px;
    font-size: 20px;
    font-weight: 600;
    line-height: unset;
}


/* Bundle text */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game .title .bundle_label {
    font-size: 14px;
    font-weight: 600;
    color: rgb(var(--st-blue));
}

/* Bundle (?) */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game .title .bundle_label span {
    display: none;
}

/*^ Desciption */
.game_bg.application .game_description_column .game_area_purchase .game_purchase_discount_countdown {
    width: 100%;
    margin-bottom: 6px;
    font-weight: 500;
    color: rgb(var(--st-accent-1));
}


.game_bg.application .game_description_column .game_area_purchase .package_contents {
    width: 55%;
    margin: 0;
}

/*^ Bundle content */
.game_bg.application .game_description_column .game_area_purchase .bundle_contents_preview,
.game_bg.application .game_description_column .game_area_purchase .package_contents_capsules_ctn {
    width: fit-content;
    margin: 6px 0 0;
    padding: 0;
    background-color: unset;
}

/* List */
.game_bg.application .game_description_column .game_area_purchase .bundle_contents_preview_position,
.game_bg.application .game_description_column .game_area_purchase .package_contents_capsules {
    display: flex;
    gap: 6px;
    height: unset;
}

.game_bg.application .game_description_column .game_area_purchase .bundle_contents_preview_item,
.game_bg.application .game_description_column .game_area_purchase .package_contents_capsule {
    position: relative;
    display: none;
}
.game_bg.application .game_description_column .game_area_purchase .bundle_contents_preview_item:nth-child(-n+3),
.game_bg.application .game_description_column .game_area_purchase .package_contents_capsule:nth-child(-n+3) {
    display: flex;
    box-shadow: unset !important;
}

/* on Wishlist icon */
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game_wrapper .ds_wishlist_flag {
    position: absolute;
    top: 4px;
    left: 4px;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: unset;
    width: 20px;
    height: 20px;
    padding: 0px;
    font-size: 0;
    border-radius: 8px;
    background: unset;
    background-color: rgb(var(--st-blue));
}
.game_bg.application .game_description_column .game_area_purchase .game_area_purchase_game_wrapper .ds_wishlist_flag::before {
    content: "\f1f6";
    position: absolute;
    font-size: 14px;
    color: #fff;
    font-family: FluentSystemIcons-Filled !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
}

/* List more icon */
.game_bg.application .game_description_column .game_area_purchase .bundle_contents_preview_item:nth-child(4),
.game_bg.application .game_description_column .game_area_purchase .package_contents_capsule:nth-child(4) {
    display: flex;
    pointer-events: none;
}
/* ... */

